 2014-10-05 13:16  alexpeshkoff 
   M src/dsql/make.cpp
   M src/dsql/metd.epp
Backported fix for CORE-4566: Incorrect size of the output parameter/argument when execute block, procedure or function use system field in metadata charset

 2014-10-05 10:03  alexpeshkoff 
   M src/jrd/Collation.cpp
Make it build with fresh gcc - added template functions declarations

 2014-09-17 13:00  paulbeach 
   M builds/posix/Makefile.in.firebird
   M builds/posix/prefix.darwin_i386
   M builds/posix/prefix.darwin_x86_64
Fix an annoying typo

 2014-09-02 06:29  paulbeach 
   M builds/posix/prefix.darwin_i386
   M builds/posix/prefix.darwin_x86_64
Fix for CORE-4536

 2014-05-30 01:31  robocop 
   M src/gpre/cmp.cpp
Misc.

 2014-05-28 06:14  dimitr 
   M doc/WhatsNew
Fixed the items ordering.

 2014-05-28 06:12  dimitr 
   M doc/WhatsNew
Updated the docs.

 2014-05-28 05:57  dimitr 
   M src/gpre/c_cxx.cpp
   M src/gpre/cme.cpp
   M src/gpre/cmp.cpp
   M src/gpre/gpre.h
   M src/gpre/hsh.h
   M src/gpre/msc.cpp
   M src/gpre/msc_proto.h
   M src/gpre/par.cpp
   M src/gpre/sqe.cpp
   M src/gpre/sqe_proto.h
   M src/gpre/sql.cpp
   M src/gpre/words.h
CORE-4437: Add support for the RETURNING clause to Embedded SQL.
CORE-4438: Add support for UPDATE OR INSERT statement to Embedded SQL.
Only C/C++ language support is added, other languages will be supported in trunk.

 2014-05-06 14:05  hvlad 
   M src/remote/server.cpp
Backported fix for bug CORE-2349 : False "Invalid SQLDA" error

 2014-04-05 18:10  dimitr 
   M src/jrd/dfw.epp
Simplest solution for CORE-4386: Report more details for "object in use" errors. Also, I've removed the database filename from the error message for security reasons. v3 is going to get a more complete solution.

 2014-04-05 09:18  dimitr 
   M src/jrd/Relation.h
   M src/jrd/met.epp
Backported the view flag.

 2014-02-25 06:24  robocop 
   M src/qli/compile.cpp
This bug comes from IB, maybe from the dawn of time (PVS-Studio).

 2014-02-22 22:23  robocop 