@@ -1,3 +1,12 @@
+ 2014-12-02 16:24  dimitr 
+   M doc/WhatsNew
+   M src/misc/writeBuildNum.sh
+Updated docs & version info.
+
+ 2014-12-02 10:18  alexpeshkoff 
+   M src/remote/protocol.cpp
+Fixed CORE-4630: Segfault in server caused by bad packet
+
  2014-10-05 13:16  alexpeshkoff 
    M src/dsql/make.cpp
    M src/dsql/metd.epp
